Libros y guías estilados en vista movil

--- a/css/bp1.styl
+++ b/css/bp1.styl
@@ -44,6 +44,16 @@ article
 		margin 1em 0 
 		padding 1em
 		.video
+		.libro
+			p
+				border-top 1px solid white
+				box-shadow 0 -1px 0 borde
+				font-family mayuscula
+				font-size 1.3em
+				letter-spacing -2px
+				margin 1em 0 0 0 
+				padding .2em 0 0 0 
+		.video
 			margin 2em 0 2em 0
 			&:last-child
 				margin 2em 0 1em 0
@@ -60,14 +70,15 @@ article
 					position absolute
 					top 0
 					width 100%
-			p
-				border-top 1px solid white
-				box-shadow 0 -1px 0 borde
-				font-family mayuscula
-				font-size 1.3em
-				letter-spacing -2px
-				margin 1em 0 0 0 
-				padding .2em 0 0 0 
+		.libro
+			margin 2em 0 2em 0
+			img
+				box-shadow 0 0 5px rgba(black,.5)
+				display block
+				height auto
+				margin auto
+				width 10em
+			
 
 
 p
