--- a/css/estilos.css
+++ b/css/estilos.css
@@ -324,6 +324,16 @@
     margin: 1em 0;
     padding: 1em;
   }
+  article .materiales .video p,
+  article .materiales .libro p {
+    border-top: 1px solid #fff;
+    box-shadow: 0 -1px 0 #c6cfd3;
+    font-family: lucida grande;
+    font-size: 1.3em;
+    letter-spacing: -2px;
+    margin: 1em 0 0 0;
+    padding: 0.2em 0 0 0;
+  }
   article .materiales .video {
     margin: 2em 0 2em 0;
   }
@@ -345,14 +355,15 @@
     top: 0;
     width: 100%;
   }
-  article .materiales .video p {
-    border-top: 1px solid #fff;
-    box-shadow: 0 -1px 0 #c6cfd3;
-    font-family: lucida grande;
-    font-size: 1.3em;
-    letter-spacing: -2px;
-    margin: 1em 0 0 0;
-    padding: 0.2em 0 0 0;
+  article .materiales .libro {
+    margin: 2em 0 2em 0;
+  }
+  article .materiales .libro img {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    display: block;
+    height: auto;
+    margin: auto;
+    width: 10em;
   }
   p {
     line-height: 1.4;
