Estilados videos en vista tablet

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -48,6 +48,58 @@
     margin: 0.4em 0.5em 0 2em;
     text-align: left;
   }
+  article .materiales {
+    background: #ebf0f4;
+    border-bottom: 1px solid #c6cfd3;
+    border-top: 1px solid #c6cfd3;
+    padding: 3.5em;
+  }
+  article .materiales .video p,
+  article .materiales .libro p {
+    border-top: 1px solid #fff;
+    box-shadow: 0 -1px 0 #c6cfd3;
+    font-family: lucida grande;
+    font-size: 1.3em;
+    letter-spacing: -2px;
+    margin: 1em 0 0 0;
+    padding: 0.2em 0 0 0;
+  }
+  article .materiales .video {
+    display: inline-block;
+    margin: 0 3em 3em 0;
+    width: 45%;
+  }
+  article .materiales .video:last-child {
+    margin: 0;
+  }
+  article .materiales .video:nth-child(even) {
+    margin: 0 0 3em 0;
+  }
+  article .materiales .video .contenedor {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    position: relative;
+  }
+  article .materiales .video .contenedor iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+  article .materiales .libro {
+    margin: 2em 0 2em 0;
+  }
+  article .materiales .libro img {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    display: block;
+    height: auto;
+    margin: auto;
+    width: 10em;
+  }
   body {
     background: #edf1f3;
     color: #343434;
