--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -1,5 +1,4 @@
 
-
 article
 	background white
 	border-radius 5px
@@ -38,6 +37,50 @@ article
 			line-height 1em
 			margin .4em .5em 0 2em
 			text-align left
+	.materiales
+		background claro
+		border-bottom 1px solid borde
+		border-top 1px solid borde
+		padding 3.5em
+		.video
+		.libro
+			p
+				border-top 1px solid white
+				box-shadow 0 -1px 0 borde
+				font-family mayuscula
+				font-size 1.3em
+				letter-spacing -2px
+				margin 1em 0 0 0 
+				padding .2em 0 0 0 
+		.video
+			display inline-block
+			margin 0 3em 3em 0
+			width 45%
+			&:last-child
+				margin 0
+			&:nth-child(even)
+				margin 0 0 3em 0
+			.contenedor
+				box-shadow 0 0 5px rgba(black,.5)
+				height 0
+				overflow hidden
+				padding-bottom 56.25%
+				padding-top 30px
+				position relative
+				iframe
+					height  100%
+					left 0
+					position absolute
+					top 0
+					width 100%
+		.libro
+			margin 2em 0 2em 0
+			img
+				box-shadow 0 0 5px rgba(black,.5)
+				display block
+				height auto
+				margin auto
+				width 10em
 	
 	
 			
