--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -74,13 +74,21 @@ article
 					top 0
 					width 100%
 		.libro
-			margin 2em 0 2em 0
+			display inline-block
+			margin 0 3em 0 0
+			width 45%
+			&:last-child
+				margin 0
+			&:nth-child(even)
+				margin 0
 			img
 				box-shadow 0 0 5px rgba(black,.5)
 				display block
 				height auto
 				margin auto
 				width 10em
+			p
+				text-align center
 	
 	
 			
