--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,305 @@
   font-weight: normal;
   font-style: normal;
 }
-@media screen and (max-width: 1000px) {
+body {
+  background: #edf1f3;
+  color: #343434;
+  font-family: raleway, sans-serif;
+  font-size: 15px;
+}
+h1 {
+  font-size: 3em;
+  font-family: lobster, sans-serif;
+  font-weight: normal;
+  margin: 0 0 0.5em 0;
+  text-align: center;
+}
+h1 small {
+  border-top: 1px solid #c6cfd3;
+  color: #343434;
+  display: block;
+  font-size: 0.39em;
+  line-height: -5em;
+  margin: 0.1em auto 0 auto;
+  max-width: 17em;
+}
+h2 {
+  display: inline-block;
+  font-family: lucida grande;
+  font-weight: normal;
+  font-size: 2em;
+  letter-spacing: -3px;
+  margin: 0.5em 0 0.5em 0;
+}
+h3 {
+  color: #3b84bf;
+  font-family: lucida grande;
+  font-weight: normal;
+  letter-spacing: -2px;
+}
+p {
+  line-height: 1.4;
+  margin: 0.5em 2em;
+}
+p:first-child {
+  margin: 0 2em 0 2em;
+}
+@media screen and (min-width: 992px) {
+  article {
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.2);
+    margin: 1em;
+    padding: 0 0 1em 0;
+  }
+  article .encabezado {
+    margin: 0 0 1em 0;
+  }
+  article .encabezado .numero {
+    background: #3b84bf;
+    color: #edf1f3;
+    float: left;
+    font-family: lucida grande;
+    font-size: 0.5em;
+    font-weight: bold;
+    height: 1.7em;
+    line-height: 1.5;
+    margin: 1em 1.5em 0 0;
+    padding: 0.15em 0 0 0;
+    position: relative;
+    text-align: center;
+    width: 2em;
+    z-index: 0;
+  }
+  article .encabezado .numero:after {
+    border-top: solid 0 transparent;
+    border-left: solid 0.7em #3b84bf;
+    border-bottom: solid 1.8em transparent;
+    border-right: solid 0 transparent;
+    content: "";
+    left: 2em;
+    position: absolute;
+    top: 0px;
+  }
+  article .encabezado .nombre {
+    display: block;
+    line-height: 1em;
+    margin: 0.4em 0.5em 0 2em;
+    text-align: left;
+  }
+  article .materiales {
+    background: #ebf0f4;
+    border-bottom: 1px solid #c6cfd3;
+    border-top: 1px solid #c6cfd3;
+    padding: 3.5em;
+  }
+  article .materiales .video p,
+  article .materiales .libro p {
+    border-top: 1px solid #fff;
+    box-shadow: 0 -1px 0 #c6cfd3;
+    font-family: lucida grande;
+    font-size: 1.3em;
+    letter-spacing: -2px;
+    margin: 1em 0 0 0;
+    padding: 0.2em 0 0 0;
+  }
+  article .materiales .video {
+    display: inline-block;
+    margin: 0 3em 3em 0;
+    width: 45%;
+  }
+  article .materiales .video:last-child {
+    margin: 0;
+  }
+  article .materiales .video:nth-child(even) {
+    margin: 0 0 3em 0;
+  }
+  article .materiales .video .contenedor {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    position: relative;
+  }
+  article .materiales .video .contenedor iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+  article .materiales .libro {
+    display: inline-block;
+    margin: 0 3em 0 0;
+    width: 45%;
+  }
+  article .materiales .libro:last-child {
+    margin: 0;
+  }
+  article .materiales .libro:nth-child(even) {
+    margin: 0;
+  }
+  article .materiales .libro img {
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    display: block;
+    height: auto;
+    margin: auto;
+    width: 10em;
+  }
+  article .materiales .libro p {
+    text-align: center;
+  }
+  header {
+    height: 250px;
+    left: 0px;
+    margin: 1em 0 0 0;
+    position: fixed;
+    top: 0px;
+    width: 325px;
+  }
+  header img {
+    display: block;
+    margin: 0.5em auto;
+    width: 120px;
+  }
+  footer {
+    bottom: 0px;
+    display: inline-block;
+    height: 200px;
+    margin-left: 325px;
+    max-width: 1000px;
+    position: relative;
+    width: 100%;
+    background: #3b84bf;
+    height: 10em;
+  }
+  footer .avatar {
+    background: #fff;
+    display: inline-block;
+    float: left;
+    height: 10em;
+    position: relative;
+    width: 9.5em;
+  }
+  footer .avatar:after {
+    border-bottom: solid 10em transparent;
+    border-left: solid 5em #fff;
+    border-right: solid 10px transparent;
+    border-top: solid 0 #008000;
+    content: "";
+    left: 9.5em;
+    position: absolute;
+    top: 0px;
+  }
+  footer .avatar img {
+    border: 2px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 2px #000;
+    height: auto;
+    left: 1em;
+    position: absolute;
+    top: 1em;
+    width: 3em;
+    z-index: 5;
+  }
+  footer .avatar p {
+    color: #343434;
+    font-size: 1em;
+    left: 4em;
+    line-height: 1.1em;
+    position: absolute;
+    text-align: left;
+    top: 1.5em;
+    white-space: nowrap;
+    z-index: 4;
+  }
+  footer .social {
+    position: relative;
+    z-index: 3;
+  }
+  footer .social a {
+    color: #fff;
+    font-family: raleway, sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+  }
+  footer .social .twitter,
+  footer .social .github,
+  footer .social .email {
+    position: absolute;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+  }
+  footer .social .twitter:before,
+  footer .social .github:before,
+  footer .social .email:before {
+    font-family: icono;
+    margin: 0 0.5em 0 0;
+    vertical-align: bottom;
+  }
+  footer .social .twitter {
+    right: 0.5em;
+    text-decoration: none;
+    top: 0.7em;
+  }
+  footer .social .twitter:before {
+    content: "\e606";
+  }
+  footer .social .twitter:hover {
+    color: #21b2e9;
+  }
+  footer .social .github {
+    right: 0.5em;
+    text-decoration: none;
+    top: 2.7em;
+  }
+  footer .social .github:before {
+    content: "\e609";
+  }
+  footer .social .github:hover {
+    color: #343434;
+    text-decoration: none;
+  }
+  footer .social .email {
+    right: 0.5em;
+    text-decoration: none;
+    top: 4.7em;
+  }
+  footer .social .email:before {
+    content: "\e602";
+  }
+  footer .social .email:hover {
+    color: #f6ca2d;
+  }
+  nav {
+    bottom: 0px;
+    left: 0px;
+    position: fixed;
+    top: 250px;
+    width: 325px;
+  }
+  nav ul {
+    border: 1px solid rgba(111,129,148,0.5);
+    border-radius: 5px;
+  }
+  nav ul li {
+    position: relative;
+    border-bottom: 1px solid rgba(111,129,148,0.5);
+  }
+  nav ul li a {
+    color: #3b84bf;
+    display: block;
+    padding: 4px 40px 4px 10px;
+    text-decoration: none;
+  }
+  section {
+    display: inline-block;
+    margin-left: 325px;
+    max-width: 1000px;
+  }
+}
+@media screen and (max-width: 992px) {
   article {
     background: #fff;
     border-radius: 5px;
@@ -337,7 +635,7 @@
     top: -1px;
   }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 630px) {
   article {
     background: #fff;
     border-radius: 5px;
