Mejoras de estilo generales

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -41,7 +41,8 @@ article
 		background claro
 		border-bottom 1px solid borde
 		border-top 1px solid borde
-		padding 3.5em
+		margin 1em 0 3em 0 
+		padding 3.5em 3.5em 2em 3.5em
 		.video
 		.libro
 			p
