--- a/css/bp2.styl
+++ b/css/bp2.styl
@@ -41,7 +41,8 @@ article
 		background claro
 		border-bottom 1px solid borde
 		border-top 1px solid borde
-		padding 3.5em
+		margin  1em 0 3em 0 
+		padding 3.5em 3.5em 2em 3.5em
 		.video
 		.libro
 			p
@@ -89,43 +90,6 @@ article
 				width 10em
 			p
 				text-align center
-	
-	
-			
-body 
-	background fondo
-	color gris
-	font-family texto
-	font-size 15px
-
-h1
-	font-size 3em;
-	font-family titulo
-	font-weight normal
-	margin 0 0 .5em 0
-	text-align center
-	small
-		border-top 1px solid borde
-		color gris
-		display block
-		font-size .39em;
-		line-height -5em
-		margin .1em auto 0 auto 
-		max-width 17em
-
-h2
-	display inline-block
-	font-family mayuscula
-	font-weight normal
-	font-size 2em;
-	letter-spacing -3px
-	margin .5em 0 .5em 0
-
-h3
-	color azul
-	font-family mayuscula
-	font-weight normal
-	letter-spacing -2px
 
 header
 	img
@@ -236,12 +200,6 @@ nav
 		&:after
 			content "\e60a"
 			font-family icono
-
-p
-	line-height 1.4
-	margin .5em 2em
-	&:first-child 
-		margin 0 2em 0 2em
 
 section
 	background #dcdcdc
