--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,7 +95,8 @@ p:first-child {
     background: #ebf0f4;
     border-bottom: 1px solid #c6cfd3;
     border-top: 1px solid #c6cfd3;
-    padding: 3.5em;
+    margin: 1em 0 3em 0;
+    padding: 3.5em 3.5em 2em 3.5em;
   }
   article .materiales .video p,
   article .materiales .libro p {
@@ -350,7 +351,8 @@ p:first-child {
     background: #ebf0f4;
     border-bottom: 1px solid #c6cfd3;
     border-top: 1px solid #c6cfd3;
-    padding: 3.5em;
+    margin: 1em 0 3em 0;
+    padding: 3.5em 3.5em 2em 3.5em;
   }
   article .materiales .video p,
   article .materiales .libro p {
@@ -408,42 +410,6 @@ p:first-child {
   }
   article .materiales .libro p {
     text-align: center;
-  }
-  body {
-    background: #edf1f3;
-    color: #343434;
-    font-family: raleway, sans-serif;
-    font-size: 15px;
-  }
-  h1 {
-    font-size: 3em;
-    font-family: lobster, sans-serif;
-    font-weight: normal;
-    margin: 0 0 0.5em 0;
-    text-align: center;
-  }
-  h1 small {
-    border-top: 1px solid #c6cfd3;
-    color: #343434;
-    display: block;
-    font-size: 0.39em;
-    line-height: -5em;
-    margin: 0.1em auto 0 auto;
-    max-width: 17em;
-  }
-  h2 {
-    display: inline-block;
-    font-family: lucida grande;
-    font-weight: normal;
-    font-size: 2em;
-    letter-spacing: -3px;
-    margin: 0.5em 0 0.5em 0;
-  }
-  h3 {
-    color: #3b84bf;
-    font-family: lucida grande;
-    font-weight: normal;
-    letter-spacing: -2px;
   }
   header img {
     display: block;
@@ -569,13 +535,6 @@ p:first-child {
   nav .lista:after {
     content: "\e60a";
     font-family: icono;
-  }
-  p {
-    line-height: 1.4;
-    margin: 0.5em 2em;
-  }
-  p:first-child {
-    margin: 0 2em 0 2em;
   }
   section {
     background: #dcdcdc;
