--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -6,6 +6,7 @@ mayuscula = lucida grande
 // Colores =========================================
 fondo = rgb(237,241,243)
 borde = rgb(198,207,211)
+boton = rgba(111,129,148, .5)
 hover = rgba(0,0,0,.7)
 azul = #3b84bf
 gris = #343434
@@ -32,7 +33,7 @@ h1
 	font-size 3em;
 	font-family titulo
 	font-weight normal
-	margin 0 0 .5em 0
+	margin 0 
 	text-align center
 	small
 		border-top 1px solid borde
