--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,7 @@ h1 {
   font-size: 3em;
   font-family: lobster, sans-serif;
   font-weight: normal;
-  margin: 0 0 0.5em 0;
+  margin: 0;
   text-align: center;
 }
 h1 small {
@@ -156,9 +156,9 @@ p:first-child {
     text-align: center;
   }
   header {
-    height: 250px;
+    height: 220px;
     left: 0px;
-    margin: 1em 0 0 0;
+    padding: 1em 0 0 0;
     position: fixed;
     top: 0px;
     width: 325px;
@@ -166,142 +166,134 @@ p:first-child {
   header img {
     display: block;
     margin: 0.5em auto;
-    width: 120px;
+    width: 100px;
   }
   footer {
+    border-top: 1px solid #fff;
     bottom: 0px;
-    display: inline-block;
-    height: 200px;
-    margin-left: 325px;
-    max-width: 1000px;
-    position: relative;
+    box-shadow: 0 -1px 0 #c6cfd3;
+    height: 50px;
+    left: 0px;
+    position: fixed;
     width: 100%;
-    background: #3b84bf;
-    height: 10em;
   }
   footer .avatar {
-    background: #fff;
-    display: inline-block;
-    float: left;
-    height: 10em;
-    position: relative;
-    width: 9.5em;
-  }
-  footer .avatar:after {
-    border-bottom: solid 10em transparent;
-    border-left: solid 5em #fff;
-    border-right: solid 10px transparent;
-    border-top: solid 0 #008000;
-    content: "";
-    left: 9.5em;
+    left: 325px;
+    padding: 0 50px 0 0;
     position: absolute;
-    top: 0px;
+  }
+  footer .avatar:hover {
+    background: rgba(0,0,0,0.03);
+  }
+  footer .avatar:hover p {
+    color: #343434;
   }
   footer .avatar img {
-    border: 2px solid #fff;
+    border: 3px solid #fff;
     border-radius: 50%;
-    box-shadow: 0 0 2px #000;
+    box-shadow: 0 0 1px rgba(0,0,0,0.5);
     height: auto;
-    left: 1em;
-    position: absolute;
-    top: 1em;
-    width: 3em;
-    z-index: 5;
+    margin: 0.2em 0 0 1em;
+    width: 37px;
   }
   footer .avatar p {
-    color: #343434;
-    font-size: 1em;
-    left: 4em;
-    line-height: 1.1em;
-    position: absolute;
-    text-align: left;
-    top: 1.5em;
-    white-space: nowrap;
-    z-index: 4;
-  }
-  footer .social {
+    color: #b3b3b3;
+    left: 40px;
     position: relative;
-    z-index: 3;
-  }
-  footer .social a {
-    color: #fff;
-    font-family: raleway, sans-serif;
-    font-size: 1.5em;
-    font-weight: bold;
-  }
-  footer .social .twitter,
-  footer .social .github,
-  footer .social .email {
-    position: absolute;
+    top: -42px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
   }
-  footer .social .twitter:before,
-  footer .social .github:before,
-  footer .social .email:before {
-    font-family: icono;
-    margin: 0 0.5em 0 0;
-    vertical-align: bottom;
-  }
-  footer .social .twitter {
-    right: 0.5em;
-    text-decoration: none;
-    top: 0.7em;
-  }
-  footer .social .twitter:before {
-    content: "\e606";
-  }
-  footer .social .twitter:hover {
-    color: #21b2e9;
-  }
-  footer .social .github {
-    right: 0.5em;
-    text-decoration: none;
-    top: 2.7em;
-  }
-  footer .social .github:before {
-    content: "\e609";
-  }
-  footer .social .github:hover {
-    color: #343434;
-    text-decoration: none;
-  }
   footer .social .email {
-    right: 0.5em;
+    color: #b3b3b3;
+    left: 601px;
+    line-height: 3em;
+    padding: 0 25px;
+    position: absolute;
     text-decoration: none;
-    top: 4.7em;
+    top: 0px;
   }
   footer .social .email:before {
     content: "\e602";
+    font-family: icono;
+    font-size: 1.5em;
   }
   footer .social .email:hover {
-    color: #f6ca2d;
+    background: #f6ca2d;
+    color: #fff;
+  }
+  footer .social .github {
+    border-right: 1px solid;
+    color: #b3b3b3;
+    left: 0px;
+    line-height: 3em;
+    padding: 0 150.5px;
+    position: absolute;
+    text-decoration: none;
+    top: 0px;
+  }
+  footer .social .github:before {
+    content: "\e609";
+    font-family: icono;
+    font-size: 1.5em;
+  }
+  footer .social .github:hover {
+    background: rgba(0,0,0,0.03);
+    border-color: #c6cfd3;
+    color: #343434;
+  }
+  footer .social .twitter {
+    color: #b3b3b3;
+    left: 528px;
+    line-height: 3em;
+    padding: 0 25px;
+    position: absolute;
+    text-decoration: none;
+    top: 0px;
+  }
+  footer .social .twitter:before {
+    content: "\e606";
+    font-family: icono;
+    font-size: 1.5em;
+  }
+  footer .social .twitter:hover {
+    background: #21b2e9;
+    color: #fff;
   }
   nav {
-    bottom: 0px;
+    bottom: 50px;
     left: 0px;
+    overflow-y: auto;
     position: fixed;
-    top: 250px;
+    top: 235px;
     width: 325px;
   }
   nav ul {
-    border: 1px solid rgba(111,129,148,0.5);
-    border-radius: 5px;
+    margin: 0;
+    padding: 0;
   }
   nav ul li {
-    position: relative;
-    border-bottom: 1px solid rgba(111,129,148,0.5);
+    border: 1px solid;
+    margin: 0 0 0 1em;
   }
   nav ul li a {
     color: #3b84bf;
-    display: block;
-    padding: 4px 40px 4px 10px;
+    font-size: 1.1em;
     text-decoration: none;
+    display: block;
+    padding: 0.5em 1.5em 0.5em 1em;
+  }
+  nav ul li .capitulo a {
+    background: #3b84bf;
+    color: #ebf0f4;
   }
   section {
-    display: inline-block;
-    margin-left: 325px;
+    bottom: 50px;
+    left: 325px;
     max-width: 1000px;
+    overflow-y: auto;
+    position: absolute;
+    top: 0px;
   }
 }
 @media screen and (max-width: 992px) {
