Retoques footer escritorio

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -112,10 +112,11 @@ footer
 	position fixed
 	width 100%
 	.avatar
-		// background green
 		left 325px
-		padding 0 50px 0 0 
+		padding 0 35px 0 0 
 		position absolute
+		transition all .2s ease
+		-webkit-transition all .2s ease
 		&:hover
 			background: rgba(0,0,0,.03);
 			p
@@ -137,12 +138,14 @@ footer
 	.social
 		.email
 			color #b3b3b3 
-			left 601px
+			left 586px
 			line-height 3em
 			padding 0 25px 
 			position absolute
 			text-decoration none
 			top 0px
+			transition all .2s ease
+			-webkit-transition all .2s ease
 			&:before
 				content "\e602"
 				font-family icono
@@ -169,12 +172,14 @@ footer
 				color gris
 		.twitter
 			color #b3b3b3 
-			left 528px
+			left 513px
 			line-height 3em
 			padding 0 25px 
 			position absolute
 			text-decoration none
 			top 0px
+			transition all .2s ease
+			-webkit-transition all .2s ease
 			&:before
 				content "\e606"
 				font-family icono
