Modificando estilos video y libros

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -54,13 +54,7 @@ article
 				margin 1em 0 0 0 
 				padding .2em 0 0 0 
 		.video
-			display inline-block
-			margin 0 3em 3em 0
-			width 45%
-			&:last-child
-				margin 0
-			&:nth-child(even)
-				margin 0 0 3em 0
+
 			.contenedor
 				box-shadow 0 0 5px rgba(black,.5)
 				height 0
@@ -199,7 +193,7 @@ nav
 		margin 0
 		padding 0
 		li
-			border 1px solid
+			// border 1px solid
 			margin 0 0 0 1em
 			a 
 				color azul
