--- a/css/estilos.css
+++ b/css/estilos.css
@@ -108,17 +108,6 @@ p:first-child {
     margin: 1em 0 0 0;
     padding: 0.2em 0 0 0;
   }
-  article .materiales .video {
-    display: inline-block;
-    margin: 0 3em 3em 0;
-    width: 45%;
-  }
-  article .materiales .video:last-child {
-    margin: 0;
-  }
-  article .materiales .video:nth-child(even) {
-    margin: 0 0 3em 0;
-  }
   article .materiales .video .contenedor {
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
     height: 0;
@@ -279,7 +268,6 @@ p:first-child {
     padding: 0;
   }
   nav ul li {
-    border: 1px solid;
     margin: 0 0 0 1em;
   }
   nav ul li a {
@@ -408,6 +396,9 @@ p:first-child {
   }
   article .materiales .libro p {
     text-align: center;
+  }
+  header {
+    margin: 0 0 1em 0;
   }
   header img {
     display: block;
