--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -1,89 +1,4 @@
 
-article
-	background white
-	border-radius 5px
-	box-shadow: 0 0 6px rgba(0,0,0,0.2);
-	margin 1em
-	padding 0 0 1em 0
-	.encabezado
-		margin 0 0 1em 0
-		.numero
-			background azul
-			color fondo
-			float left
-			font-family mayuscula
-			font-size .5em
-			font-weight bold
-			height 1.7em 
-			line-height 1.5
-			margin 1em 1.5em 0 0
-			padding .15em 0 0 0 
-			position relative
-			text-align center
-			width 2em 
-			z-index 0
-			&:after
-				border-top solid 0 transparent
-				border-left solid .7em azul
-				border-bottom solid 1.8em transparent
-				border-right solid 0 transparent
-				content ""
-				left 2em
-				position absolute
-				top 0px
-
-		.nombre
-			display block
-			line-height 1em
-			margin .4em .5em 0 2em
-			text-align left
-	.materiales
-		background claro
-		border-bottom 1px solid borde
-		border-top 1px solid borde
-		margin 1em 0 3em 0 
-		padding 3.5em 3.5em 2em 3.5em
-		.video
-		.libro
-			p
-				border-top 1px solid white
-				box-shadow 0 -1px 0 borde
-				font-family mayuscula
-				font-size 1.3em
-				letter-spacing -2px
-				margin 1em 0 0 0 
-				padding .2em 0 0 0 
-		.video
-
-			.contenedor
-				box-shadow 0 0 5px rgba(black,.5)
-				height 0
-				overflow hidden
-				padding-bottom 56.25%
-				padding-top 30px
-				position relative
-				iframe
-					height  100%
-					left 0
-					position absolute
-					top 0
-					width 100%
-		.libro
-			display inline-block
-			margin 0 3em 0 0
-			width 45%
-			&:last-child
-				margin 0
-			&:nth-child(even)
-				margin 0
-			img
-				box-shadow 0 0 5px rgba(black,.5)
-				display block
-				height auto
-				margin auto
-				width 10em
-			p
-				text-align center
 
 header
 	height 220px
@@ -106,21 +21,21 @@ footer
 	position fixed
 	width 100%
 	.avatar
-		left 325px
-		padding 0 35px 0 0 
+		left 320px
+		padding 0 35px 0 5px 
 		position absolute
 		transition all .2s ease
 		-webkit-transition all .2s ease
 		&:hover
-			background: rgba(0,0,0,.03);
+			background: azul;
 			p
-				color gris
+				color white
 		img
 			border 3px solid white
 			border-radius 50%
 			box-shadow 0 0 1px rgba(black,.5)
 			height auto
-			margin .2em 0 0 1em
+			margin .25em 0 0 1em
 			width 37px
 		p
 			color #b3b3b3 
@@ -133,7 +48,7 @@ footer
 		.email
 			color #b3b3b3 
 			left 586px
-			line-height 3em
+			line-height 3.2em
 			padding 0 25px 
 			position absolute
 			text-decoration none
@@ -143,7 +58,7 @@ footer
 			&:before
 				content "\e602"
 				font-family icono
-				font-size 1.5em
+				font-size 1.2em
 			&:hover
 				background #f6ca2d
 				color white
@@ -151,23 +66,25 @@ footer
 			border-right 1px solid
 			color #b3b3b3 
 			left 0px
-			line-height 3em
+			line-height 3.2em
 			padding 0 150.5px  
 			position absolute
 			text-decoration none
 			top 0px
+			transition all .2s ease
+			-webkit-transition all .2s ease
 			&:before
 				content "\e609"
 				font-family icono
-				font-size 1.5em
+				font-size 1.2em
 			&:hover
-				background rgba(0,0,0,.03);
+				background #64c53d
 				border-color borde
-				color gris
+				color white
 		.twitter
 			color #b3b3b3 
 			left 513px
-			line-height 3em
+			line-height 3.2em
 			padding 0 25px 
 			position absolute
 			text-decoration none
@@ -177,7 +94,7 @@ footer
 			&:before
 				content "\e606"
 				font-family icono
-				font-size 1.5em
+				font-size 1.2em
 			&:hover
 				background #21b2e9
 				color white
