--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,92 @@
   font-weight: normal;
   font-style: normal;
 }
+article {
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 6px rgba(0,0,0,0.2);
+  margin: 1em;
+  padding: 0 0 1em 0;
+}
+article .encabezado {
+  margin: 0 0 1em 0;
+}
+article .encabezado .numero {
+  background: #3b84bf;
+  color: #edf1f3;
+  float: left;
+  font-family: lucida grande;
+  font-size: 0.5em;
+  font-weight: bold;
+  height: 1.7em;
+  line-height: 1.5;
+  margin: 1em 1.5em 0 0;
+  padding: 0.15em 0 0 0;
+  position: relative;
+  text-align: center;
+  width: 2em;
+  z-index: 0;
+}
+article .encabezado .numero:after {
+  border-top: solid 0 transparent;
+  border-left: solid 0.7em #3b84bf;
+  border-bottom: solid 1.8em transparent;
+  border-right: solid 0 transparent;
+  content: "";
+  left: 2em;
+  position: absolute;
+  top: 0px;
+}
+article .encabezado .nombre {
+  display: block;
+  line-height: 1em;
+  margin: 0.4em 0.5em 0 2em;
+  text-align: left;
+}
+article .materiales {
+  background: #ebf0f4;
+  border-bottom: 1px solid #c6cfd3;
+  border-top: 1px solid #c6cfd3;
+  margin: 1em 0 3em 0;
+  padding: 3.5em 3.5em 2em 3.5em;
+}
+article .materiales .video p,
+article .materiales .libro p {
+  font-family: lucida grande;
+  font-size: 1.3em;
+  letter-spacing: -2px;
+}
+article .materiales .video .contenedor {
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  position: relative;
+}
+article .materiales .video .contenedor iframe {
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+article .materiales .libro {
+  display: inline-block;
+  margin: 0;
+  width: 45%;
+}
+article .materiales .libro:last-child {
+  margin: 0;
+}
+article .materiales .libro:nth-child(even) {
+  margin: 0;
+}
+article .materiales .libro img {
+  display: block;
+  height: auto;
+  width: 10em;
+}
 body {
   background: #edf1f3;
   color: #343434;
@@ -49,101 +135,6 @@ p:first-child {
   margin: 0 2em 0 2em;
 }
 @media screen and (min-width: 992px) {
-  article {
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 6px rgba(0,0,0,0.2);
-    margin: 1em;
-    padding: 0 0 1em 0;
-  }
-  article .encabezado {
-    margin: 0 0 1em 0;
-  }
-  article .encabezado .numero {
-    background: #3b84bf;
-    color: #edf1f3;
-    float: left;
-    font-family: lucida grande;
-    font-size: 0.5em;
-    font-weight: bold;
-    height: 1.7em;
-    line-height: 1.5;
-    margin: 1em 1.5em 0 0;
-    padding: 0.15em 0 0 0;
-    position: relative;
-    text-align: center;
-    width: 2em;
-    z-index: 0;
-  }
-  article .encabezado .numero:after {
-    border-top: solid 0 transparent;
-    border-left: solid 0.7em #3b84bf;
-    border-bottom: solid 1.8em transparent;
-    border-right: solid 0 transparent;
-    content: "";
-    left: 2em;
-    position: absolute;
-    top: 0px;
-  }
-  article .encabezado .nombre {
-    display: block;
-    line-height: 1em;
-    margin: 0.4em 0.5em 0 2em;
-    text-align: left;
-  }
-  article .materiales {
-    background: #ebf0f4;
-    border-bottom: 1px solid #c6cfd3;
-    border-top: 1px solid #c6cfd3;
-    margin: 1em 0 3em 0;
-    padding: 3.5em 3.5em 2em 3.5em;
-  }
-  article .materiales .video p,
-  article .materiales .libro p {
-    border-top: 1px solid #fff;
-    box-shadow: 0 -1px 0 #c6cfd3;
-    font-family: lucida grande;
-    font-size: 1.3em;
-    letter-spacing: -2px;
-    margin: 1em 0 0 0;
-    padding: 0.2em 0 0 0;
-  }
-  article .materiales .video .contenedor {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    position: relative;
-  }
-  article .materiales .video .contenedor iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-  article .materiales .libro {
-    display: inline-block;
-    margin: 0 3em 0 0;
-    width: 45%;
-  }
-  article .materiales .libro:last-child {
-    margin: 0;
-  }
-  article .materiales .libro:nth-child(even) {
-    margin: 0;
-  }
-  article .materiales .libro img {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    display: block;
-    height: auto;
-    margin: auto;
-    width: 10em;
-  }
-  article .materiales .libro p {
-    text-align: center;
-  }
   header {
     height: 220px;
     left: 0px;
@@ -167,24 +158,24 @@ p:first-child {
     width: 100%;
   }
   footer .avatar {
-    left: 325px;
-    padding: 0 35px 0 0;
+    left: 320px;
+    padding: 0 35px 0 5px;
     position: absolute;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
   }
   footer .avatar:hover {
-    background: rgba(0,0,0,0.03);
+    background: #3b84bf;
   }
   footer .avatar:hover p {
-    color: #343434;
+    color: #fff;
   }
   footer .avatar img {
     border: 3px solid #fff;
     border-radius: 50%;
     box-shadow: 0 0 1px rgba(0,0,0,0.5);
     height: auto;
-    margin: 0.2em 0 0 1em;
+    margin: 0.25em 0 0 1em;
     width: 37px;
   }
   footer .avatar p {
@@ -198,7 +189,7 @@ p:first-child {
   footer .social .email {
     color: #b3b3b3;
     left: 586px;
-    line-height: 3em;
+    line-height: 3.2em;
     padding: 0 25px;
     position: absolute;
     text-decoration: none;
@@ -209,7 +200,7 @@ p:first-child {
   footer .social .email:before {
     content: "\e602";
     font-family: icono;
-    font-size: 1.5em;
+    font-size: 1.2em;
   }
   footer .social .email:hover {
     background: #f6ca2d;
@@ -219,26 +210,28 @@ p:first-child {
     border-right: 1px solid;
     color: #b3b3b3;
     left: 0px;
-    line-height: 3em;
+    line-height: 3.2em;
     padding: 0 150.5px;
     position: absolute;
     text-decoration: none;
     top: 0px;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
   }
   footer .social .github:before {
     content: "\e609";
     font-family: icono;
-    font-size: 1.5em;
+    font-size: 1.2em;
   }
   footer .social .github:hover {
-    background: rgba(0,0,0,0.03);
+    background: #64c53d;
     border-color: #c6cfd3;
-    color: #343434;
+    color: #fff;
   }
   footer .social .twitter {
     color: #b3b3b3;
     left: 513px;
-    line-height: 3em;
+    line-height: 3.2em;
     padding: 0 25px;
     position: absolute;
     text-decoration: none;
@@ -249,7 +242,7 @@ p:first-child {
   footer .social .twitter:before {
     content: "\e606";
     font-family: icono;
-    font-size: 1.5em;
+    font-size: 1.2em;
   }
   footer .social .twitter:hover {
     background: #21b2e9;
@@ -291,112 +284,6 @@ p:first-child {
   }
 }
 @media screen and (max-width: 992px) {
-  article {
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-    margin: 1em;
-    padding: 0 0 1em 0;
-  }
-  article .encabezado {
-    margin: 0 0 1em 0;
-  }
-  article .encabezado .numero {
-    background: #3b84bf;
-    color: #edf1f3;
-    float: left;
-    font-family: lucida grande;
-    font-size: 0.5em;
-    font-weight: bold;
-    height: 1.7em;
-    line-height: 1.5;
-    margin: 1em 1.5em 0 0;
-    padding: 0.15em 0 0 0;
-    position: relative;
-    text-align: center;
-    width: 2em;
-    z-index: 0;
-  }
-  article .encabezado .numero:after {
-    border-top: solid 0 transparent;
-    border-left: solid 0.7em #3b84bf;
-    border-bottom: solid 1.8em transparent;
-    border-right: solid 0 transparent;
-    content: "";
-    left: 2em;
-    position: absolute;
-    top: 0px;
-  }
-  article .encabezado .nombre {
-    display: block;
-    line-height: 1em;
-    margin: 0.4em 0.5em 0 2em;
-    text-align: left;
-  }
-  article .materiales {
-    background: #ebf0f4;
-    border-bottom: 1px solid #c6cfd3;
-    border-top: 1px solid #c6cfd3;
-    margin: 1em 0 3em 0;
-    padding: 3.5em 3.5em 2em 3.5em;
-  }
-  article .materiales .video p,
-  article .materiales .libro p {
-    border-top: 1px solid #fff;
-    box-shadow: 0 -1px 0 #c6cfd3;
-    font-family: lucida grande;
-    font-size: 1.3em;
-    letter-spacing: -2px;
-    margin: 1em 0 0 0;
-    padding: 0.2em 0 0 0;
-  }
-  article .materiales .video {
-    display: inline-block;
-    margin: 0 3em 3em 0;
-    width: 45%;
-  }
-  article .materiales .video:last-child {
-    margin: 0;
-  }
-  article .materiales .video:nth-child(even) {
-    margin: 0 0 3em 0;
-  }
-  article .materiales .video .contenedor {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    position: relative;
-  }
-  article .materiales .video .contenedor iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-  article .materiales .libro {
-    display: inline-block;
-    margin: 0 3em 0 0;
-    width: 45%;
-  }
-  article .materiales .libro:last-child {
-    margin: 0;
-  }
-  article .materiales .libro:nth-child(even) {
-    margin: 0;
-  }
-  article .materiales .libro img {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    display: block;
-    height: auto;
-    margin: auto;
-    width: 10em;
-  }
-  article .materiales .libro p {
-    text-align: center;
-  }
   header {
     margin: 0 0 1em 0;
   }
@@ -584,113 +471,6 @@ p:first-child {
   }
 }
 @media screen and (max-width: 630px) {
-  article {
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 1px 0 rgba(0,0,0,0.2);
-    margin: 0.6em 0.5em;
-    padding: 0 0 1em 0;
-  }
-  article .encabezado {
-    margin: 0 0 1em 0;
-  }
-  article .encabezado .numero {
-    background: #3b84bf;
-    color: #edf1f3;
-    float: left;
-    font-family: lucida grande;
-    font-size: 0.5em;
-    font-weight: bold;
-    height: 1.7em;
-    line-height: 1.5;
-    margin: 1em 1.5em 0 0;
-    padding: 0.15em 0 0 0;
-    position: relative;
-    text-align: center;
-    width: 2em;
-    z-index: 0;
-  }
-  article .encabezado .numero:after {
-    border-top: solid 0 transparent;
-    border-left: solid 0.7em #3b84bf;
-    border-bottom: solid 1.8em transparent;
-    border-right: solid 0 transparent;
-    content: "";
-    left: 2em;
-    position: absolute;
-    top: 0px;
-  }
-  article .encabezado .nombre {
-    display: block;
-    line-height: 1em;
-    margin: 0.4em 0.5em 0 2em;
-    text-align: left;
-  }
-  article .materiales {
-    background: #ebf0f4;
-    border-bottom: 1px solid #c6cfd3;
-    border-top: 1px solid #c6cfd3;
-    margin: 1em 0;
-    padding: 1em;
-  }
-  article .materiales .video p,
-  article .materiales .libro p {
-    border-top: 1px solid #fff;
-    box-shadow: 0 -1px 0 #c6cfd3;
-    font-family: lucida grande;
-    font-size: 1.3em;
-    letter-spacing: -2px;
-    margin: 1em 0 0 0;
-    padding: 0.2em 0 0 0;
-  }
-  article .materiales .video {
-    display: inline-block;
-    margin: 1em 0;
-    width: 100%;
-  }
-  article .materiales .video:last-child {
-    margin: 1em 0;
-  }
-  article .materiales .video:nth-child(even) {
-    margin: 1em 0;
-  }
-  article .materiales .video .contenedor {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    position: relative;
-  }
-  article .materiales .video .contenedor iframe {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-  }
-  article .materiales .libro {
-    display: inline-block;
-    margin: 1em 0;
-    width: 100%;
-  }
-  article .materiales .libro img {
-    box-shadow: 0 0 5px rgba(0,0,0,0.5);
-    display: block;
-    height: auto;
-    margin: auto;
-    width: 10em;
-  }
-  article .materiales .libro p {
-    text-align: center;
-  }
-  p {
-    line-height: 1.4;
-    margin: 0.5em 1em;
-  }
-  p:first-child {
-    margin: 0 1em 0 1em;
-  }
   footer {
     background: #3b84bf;
     height: 10em;
