--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -1,5 +1,4 @@
 
-
 header
 	height 220px
 	left 0px
@@ -13,6 +12,7 @@ header
 		width 100px
 
 footer
+	background claro
 	border-top 1px solid white
 	bottom 0px
 	box-shadow 0 -1px 0 borde
@@ -27,9 +27,9 @@ footer
 		transition all .2s ease
 		-webkit-transition all .2s ease
 		&:hover
-			background: azul;
+			background rgba(black,.05)
 			p
-				color white
+				color gris
 		img
 			border 3px solid white
 			border-radius 50%
@@ -78,9 +78,9 @@ footer
 				font-family icono
 				font-size 1.2em
 			&:hover
-				background #64c53d
+				background rgba(black,.05)
 				border-color borde
-				color white
+				color gris
 		.twitter
 			color #b3b3b3 
 			left 513px
@@ -130,10 +130,10 @@ nav
 			// .tema
 
 section
-	bottom 50px
+	bottom 0px
 	left 325px
 	max-width 1000px
-	overflow-y auto
+	// overflow-y auto
 	position absolute
 	top 0px
 
