--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,6 +134,65 @@ p {
 p:first-child {
   margin: 0 2em 0 2em;
 }
+.arriba {
+  bottom: 1em;
+  color: #fff;
+  left: 1.2em;
+  opacity: 0.95;
+  position: fixed;
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
+  z-index: 10;
+}
+.arriba a {
+  background: #d9d9d9;
+  border-radius: 50%;
+  color: #fff;
+  display: block;
+  height: 3em;
+  position: relative;
+  text-decoration: none;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  width: 3em;
+}
+.arriba a:after {
+  content: "\e608";
+  font-family: icono;
+  font-size: 2em;
+  text-align: center;
+  position: absolute;
+  top: 0.2em;
+  left: 0.45em;
+}
+.arriba a:hover {
+  background: #343434;
+}
+.caja {
+  background: #ebf0f4;
+  border-top: 1px solid #c6cfd3;
+  border-bottom: 1px solid #c6cfd3;
+  margin: 0 0 1em 0;
+  padding: 0 0 0.7em 0;
+}
+.caja .resumen {
+  padding: 1em;
+}
+.caja .autor {
+  color: #808080;
+  margin-bottom: 0;
+  padding: 0 0 0 1em;
+}
+.caja .fecha {
+  color: #808080;
+  margin: 0 1em;
+  padding: 0 0 0 1em;
+}
+.caja h3 {
+  font-size: 1.5em;
+  margin: 1em 0.5em;
+  text-align: center;
+}
 @media screen and (min-width: 992px) {
   header {
     height: 220px;
@@ -149,6 +208,7 @@ p:first-child {
     width: 100px;
   }
   footer {
+    background: #ebf0f4;
     border-top: 1px solid #fff;
     bottom: 0px;
     box-shadow: 0 -1px 0 #c6cfd3;
@@ -165,10 +225,10 @@ p:first-child {
     -webkit-transition: all 0.2s ease;
   }
   footer .avatar:hover {
-    background: #3b84bf;
+    background: rgba(0,0,0,0.05);
   }
   footer .avatar:hover p {
-    color: #fff;
+    color: #343434;
   }
   footer .avatar img {
     border: 3px solid #fff;
@@ -224,9 +284,9 @@ p:first-child {
     font-size: 1.2em;
   }
   footer .social .github:hover {
-    background: #64c53d;
+    background: rgba(0,0,0,0.05);
     border-color: #c6cfd3;
-    color: #fff;
+    color: #343434;
   }
   footer .social .twitter {
     color: #b3b3b3;
@@ -275,10 +335,9 @@ p:first-child {
     color: #ebf0f4;
   }
   section {
-    bottom: 50px;
+    bottom: 0px;
     left: 325px;
     max-width: 1000px;
-    overflow-y: auto;
     position: absolute;
     top: 0px;
   }
@@ -428,40 +487,6 @@ p:first-child {
     position: relative;
     width: 109%;
   }
-  .arriba {
-    bottom: 1em;
-    color: #fff;
-    left: 1.2em;
-    opacity: 0.95;
-    position: fixed;
-    -webkit-transition: all 0.1s ease;
-    transition: all 0.1s ease;
-    z-index: 10;
-  }
-  .arriba a {
-    background: #d9d9d9;
-    border-radius: 50%;
-    color: #fff;
-    display: block;
-    height: 3em;
-    position: relative;
-    text-decoration: none;
-    transition: all 0.2s ease;
-    -webkit-transition: all 0.2s ease;
-    width: 3em;
-  }
-  .arriba a:after {
-    content: "\e608";
-    font-family: icono;
-    font-size: 2em;
-    text-align: center;
-    position: absolute;
-    top: 0.2em;
-    left: 0.45em;
-  }
-  .arriba a:hover {
-    background: #343434;
-  }
   .fixed {
     box-shadow: 0 2px 2px rgba(59,132,191,0.5);
     left: 0px;
@@ -577,30 +602,5 @@ p:first-child {
     background: #dcdcdc;
     margin: -0.6em 0;
     padding: 0.6em 0;
-  }
-  .caja {
-    background: #ebf0f4;
-    border-top: 1px solid #c6cfd3;
-    border-bottom: 1px solid #c6cfd3;
-    margin: 0 0 1em 0;
-    padding: 0 0 0.7em 0;
-  }
-  .caja .resumen {
-    padding: 1em;
-  }
-  .caja .autor {
-    color: #808080;
-    margin-bottom: 0;
-    padding: 0 0 0 1em;
-  }
-  .caja .fecha {
-    color: #808080;
-    margin: 0 1em;
-    padding: 0 0 0 1em;
-  }
-  .caja h3 {
-    font-size: 1.5em;
-    margin: 1em 0.5em;
-    text-align: center;
   }
 }
