--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -99,7 +99,7 @@ article
 				display block
 				height auto
 				width 10em
-			
+
 body 
 	background fondo
 	color gris
@@ -140,6 +140,58 @@ p
 	margin .5em 2em
 	&:first-child 
 		margin 0 2em 0 2em
+
+.arriba
+	bottom 1em
+	color white
+	left 1.2em
+	opacity .95
+	position fixed
+	-webkit-transition all .1s ease
+	transition all .1s ease
+	z-index 10
+	a 
+		background #d9d9d9
+		border-radius 50%
+		color: white;
+		display block
+		height 3em
+		position relative
+		text-decoration none
+		transition all .2s ease
+		-webkit-transition all .2s ease
+		width 3em
+		&:after
+			content "\e608"
+			font-family icono
+			font-size 2em
+			text-align center
+			position absolute
+			top .2em
+			left .45em
+		&:hover
+			background gris
+
+.caja
+	background claro
+	border-top 1px solid borde
+	border-bottom 1px solid borde
+	margin 0 0 1em 0
+	padding 0 0 .7em 0
+	.resumen
+		padding 1em
+	.autor
+		color grey
+		margin-bottom 0
+		padding 0 0 0 1em
+	.fecha
+		color grey
+		margin 0 1em
+		padding 0 0 0 1em
+	h3
+		font-size 1.5em
+		margin 1em .5em
+		text-align center
 
 // Break points
 
