--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -22,6 +22,17 @@ claro = #ebf0f4
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'icono2';
+	src:url('../fonts/fonts/icomoon.eot');
+	src:url('../fonts/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/fonts/icomoon.ttf') format('truetype'),
+		url('../fonts/fonts/icomoon.woff') format('woff'),
+		url('../fonts/fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 	
 article
 	background white
