--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -137,6 +137,15 @@ nav
 				position relative
 				transition all .2s ease
 				-webkit-transition all .2s ease
+				&:after
+					color rgba(azul,.7)
+					content "\e605"
+					font-family icono
+					font-size 1.2em
+					font-weight none
+					position absolute
+					right .5em
+					top .4em
 				&:hover
 					background rgba(black,.05)
 			.libro
