--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -4,7 +4,8 @@ texto = raleway, sans-serif
 mayuscula = lucida grande
 
 // Colores =========================================
-fondo = rgb(237,241,243)
+// fondo = rgb(237,241,243)
+fondo = #edf1f3
 borde = rgb(198,207,211)
 boton = rgba(111,129,148, .5)
 hover = rgba(0,0,0,.7)
@@ -21,6 +22,33 @@ claro = #ebf0f4
 		url('../fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
+	// .icon-facetime-video:before {
+	// 	content: "\e601";
+	// }
+	// .icon-envelope:before {
+	// 	content: "\e602";
+	// }
+	// .icon-code:before {
+	// 	content: "\e604";
+	// }
+	// .icon-home:before {
+	// 	content: "\e605";
+	// }
+	// .icon-graduation:before {
+	// 	content: "\e603";
+	// }
+	// .icon-book:before {
+	// 	content: "\e600";
+	// }
+	// .icon-twitter:before {
+	// 	content: "\e606";
+	// }
+	// .icon-github:before {
+	// 	content: "\e609";
+	// }
+	// .icon-lines:before {
+	// 	content: "\e60a";
+	// }
 }
 
 @font-face {
@@ -32,16 +60,37 @@ claro = #ebf0f4
 		url('../fonts/fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
+	// .icon-arrow-up:before {
+	// 	content: "\e610";
+	// }
+	// .icon-uniE613:before {
+	// 	content: "\e613";
+	// }
+	// .icon-in:before {
+	// 	content: "\e620";
+	// }
 }
 	
 article
 	background white
+	// border 1px solid rgba(borde,.8)
 	border-radius 5px
-	box-shadow: 0 0 6px rgba(0,0,0,0.2);
+	// box-shadow: 0 0 6px rgba(0,0,0,0.2);
+	box-shadow: 0 2px 2px rgba(0,0,0,0.3);
 	margin 1em
 	padding 0 0 1em 0
 	.encabezado
 		margin 0 0 1em 0
+		.iniciando
+			&:before
+				color claro
+				content "\e605"
+				font-family icono
+				font-size .9em
+				font-weight none
+				position absolute
+				right .6em
+				top .3em
 		.numero
 			background azul
 			color fondo
@@ -164,7 +213,7 @@ p
 	a 
 		background #d9d9d9
 		border-radius 50%
-		color: white;
+		color: claro;
 		display block
 		height 3em
 		position relative
@@ -173,12 +222,12 @@ p
 		-webkit-transition all .2s ease
 		width 3em
 		&:after
-			content "\e608"
-			font-family icono
-			font-size 2em
+			content "\e610"
+			font-family icono2
+			font-size 1.6em
 			text-align center
 			position absolute
-			top .2em
+			top .35em
 			left .45em
 		&:hover
 			background gris
