Añadidos iconos en menú y en artículos

--- a/css/bp3.styl
+++ b/css/bp3.styl
@@ -128,15 +128,18 @@ nav
 				-webkit-transition all .2s ease
 				&:hover
 					background gris
+			.ejercicio
+				&:after
+					content "\e603"
+					font-family icono
+					font-size 1.2em
+					font-weight none
+					position absolute
+					right .4em
+					top .4em
+				&:hover
+					background rgba(black,.05)
 			.iniciando
-				border 1px solid boton
-				border-radius 5px
-				color azul
-				margin 0 0 .2em 1em
-				padding .4em 1.5em .4em 1em
-				position relative
-				transition all .2s ease
-				-webkit-transition all .2s ease
 				&:after
 					color rgba(azul,.7)
 					content "\e605"
@@ -149,14 +152,6 @@ nav
 				&:hover
 					background rgba(black,.05)
 			.libro
-				border 1px solid boton
-				border-radius 5px
-				color azul
-				margin 0 0 .2em 1em
-				padding .4em 1.5em .4em 1em
-				position relative
-				transition all .2s ease
-				-webkit-transition all .2s ease
 				&:after
 					color rgba(azul,.7)
 					content "\e600"
@@ -169,14 +164,6 @@ nav
 				&:hover
 					background rgba(black,.05)
 			.oro
-				background rgba(#e5c200,.5)
-				border 1px solid #e5c200
-				border-radius 5px
-				color #7f6c00
-				margin 1.2em 0 1.3em 1em
-				padding .4em 1.5em .4em 1em
-				transition all .1s ease
-				-webkit-transition all .1s ease
 				&:after
 					content "\e604"
 					font-family icono
@@ -186,9 +173,7 @@ nav
 					right .4em
 					top .4em
 				&:hover
-					background gris
-					border 1px solid gris
-					color claro
+					background rgba(black,.05)
 			.solo
 				border 1px solid boton
 				border-radius 5px
@@ -219,14 +204,6 @@ nav
 					&:after
 						color gris
 			.video
-				border 1px solid boton
-				border-radius 5px
-				color azul
-				margin 0 0 .2em 1em
-				padding .4em 1.5em .4em 1em
-				position relative
-				transition all .2s ease
-				-webkit-transition all .2s ease
 				&:after
 					color rgba(azul,.7)
 					content "\e601"
