--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -91,6 +91,16 @@ article
 				position absolute
 				right .6em
 				top .3em
+		.libro
+			&:before
+				color claro
+				content "\e600"
+				font-family icono
+				font-size .9em
+				font-weight none
+				position absolute
+				right .6em
+				top .3em
 		.numero
 			background azul
 			color fondo
@@ -115,12 +125,21 @@ article
 				left 2em
 				position absolute
 				top 0px
-
 		.nombre
 			display block
 			line-height 1em
 			margin .4em .5em 0 2em
 			text-align left
+		.video
+			&:before
+				color claro
+				content "\e601"
+				font-family icono
+				font-size .9em
+				font-weight none
+				position absolute
+				right .6em
+				top .3em
 	.materiales
 		background claro
 		border-bottom 1px solid borde
